--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
     <p><big>Lorem</big>, <small> ipsum </small>dolor sit amet consectetur adipisicing elit. Magni eos, et sequi excepturi saepe nobis dignissimos ut animi quam tempore ullam. Impedit repellendus maxime, a aliquam mollitia atque tempora odit accusantium deleniti inventore doloremque quod odio magnam, ex est. Enim sit nemo perferendis eveniet adipisci quisquam minima sed provident esse eius eum inventore odio obcaecati eos vero, omnis eaque. Cum, accusantium sit. Animi dolor amet nihil iure inventore tenetur maiores exercitationem. Cupiditate obcaecati consequatur assumenda reprehenderit laudantium illum hic sapiente quas, numquam pariatur esse aspernatur, quos consectetur error excepturi iste nobis ducimus dolorem vero et asperiores. Corrupti, quo dolorum earum veritatis cum tenetur voluptates harum natus dignissimos. Facere minus enim minima ratione, odio sint necessitatibus repellat repellendus doloremque nisi molestias numquam! Mollitia similique magni cupiditate libero voluptatem consequuntur quisquam eligendi ducimus veritatis autem repellat deserunt tempore natus fugiat eos dolore doloremque minus, alias rem id atque accusantium. Ratione dolores fuga nemo saepe voluptates eligendi amet corrupti beatae accusamus pariatur ea et molestias doloribus commodi deleniti laudantium reiciendis necessitatibus animi officiis, sed, ab labore dolorem qui! Laboriosam nam similique doloribus. Soluta debitis fugit accusamus provident minima nulla quo eveniet quae dicta sint odio quisquam fuga delectus harum voluptas suscipit, magni eaque?</p><hr>
     <p><big>H<sub>2</sub>O</big></p>
     <p><big>10<sup>1000</sup></big></p><hr>
-    <p style="color:chartreuse;background-color:blueviolet">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, expedita modi quidem ducimus assumenda autem nisi incidunt, delectus exercitationem beatae aliquam aspernatur odio quos labore veritatis a atque suscipit quaerat.</p>
+    <p style="color:chartreuse;background-color:blueviolet">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, expedita modi quidem ducimus assumenda autem nisi incidunt, delectus exercitationem beatae aliquam aspernatur odio quos labore veritatis a atque suscipit quaerat.</p><hr>
+    <header>
+        <h1>this is header</h1>
+    </header>
+    <nav><h4>this is nav</h4></nav>
+    <main>
+        <h1>this is main</h1>
+        <article>article 1</article>
+        <article>article 2</article>
+        <article>article 3</article>
+        <article>article 4</article>
+        <section>section 1</section>
+        <section>section 2</section>
+        <section>section 3</section>
+    </main>
+    <aside>
+        <h3>this is aside tag</h3>
+    </aside>
+    <footer>
+        <h1>this is footer</h1>
+    </footer>
 </body>
 </html>
