--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     </aside>
     <footer>
         <h1>this is footer</h1>
-    </footer>
+    </footer><hr>
+    <a href="https://en.wikipedia.org/wiki/India" target="_blank">india</a>
+    <a href="https://en.wikipedia.org/wiki/India" target="_blank"><h3>india</h3></a>
+    <a href="page_1.html">page 2</a>
 </body>
 </html>
